# poemforge-paper

./: .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml
data/processed/: items.csv  manifest.json  phase_a_poemset_VERSION.txt  porter_items_s2.csv  porter_targets_s2_long.csv  targets_long.csv  targets_wide.csv
docs/: 04-paper-scaffold.md  05-research-plan.md  claims_manifest.csv  external_validation_plan.md  porting_notes.md  result_diff_report.md  reviewer_critique_action_plan.md
docs/experiment_notes/: current_claim_ladder.md  domain_contrast_followups.md  litbench_sign_flip_plan.md  same_form_domain_controls_plan.md
paper/: README.md  main.md  main.tex
pipeline/: 00_prepare_data.py  10_build_domains.py  20_score_readouts.py  30_compute_controls.py  40_residualize.py  50_permutation.py  60_bootstrap.py  61_bootstrap_absolute_effects.py  62_bootstrap_domain_contrast.py  63_bootstrap_observer_family.py  64_bootstrap_same_form_domain_contrast.py  65_inventory_same_form_controls.py  90_make_tables.py  91_make_figures.py  99_diff_against_scaffold.py  run_all.py
pipeline/litbench/: 00_inventory_litbench.py  01_surface_baselines.py  02_nll_baselines.py  03_combined_surface_nll_model.py  04_prompt_domain_inventory.py  05_prompt_conditioned_v.py  06_prompt_v_surface_controls.py  07_prompt_v_domain_contrast.py  08_prompt_v_random_split_control.py  09_prompt_domain_kernel_controls.py  10_subset_matched_reward_baseline.py  11_subset_matched_baseline_table.py  12_prompt_domain_embedding_operator_controls.py  13_train_domain_embedding_probe.py
(+1111 files in other folders)
