[project]
name = "poemforge-paper"
version = "0.1.0"
description = "Reproducibility artifact for the PoemForge domain-relativity paper"
requires-python = ">=3.10"
dependencies = [
  "pandas>=2.0",
  "numpy>=1.24",
  "scipy>=1.10",
  "scikit-learn>=1.3",
  "tqdm>=4.66",
  "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "ruff>=0.4",
]

[tool.ruff]
line-length = 100
target-version = "py310"
